one crazy muther fucker

--- a/index.html
+++ b/index.html
@@ -466,8 +466,18 @@
                 </div> <!--end:item-->
             </div>
         </div><!--end:top products-->
-        
-           
+
+
+        <!-- signup -->
+        <div id="fun-signup"></div> 
+
+        <!-- login -->
+        <div id="fun-login"></div>
+
+        <!-- dashboard --> 
+        <div id="fun-dashboard"></div>
+
+
         <section class="our-collection">
     	    <div class="container">
     	        <div class="text-heading large-head">
