--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="author" content="">
 
     <title>Snake Eye Vape</title>
-    
+    <link rel="stylesheet" href="static/css/font-awesome.min.css">
+
     <!-- Bootstrap core CSS -->
     <link href="static/css/bootstrap.min.css" rel="stylesheet">
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
