--- a/static/html/login.html
+++ b/static/html/login.html
@@ -22,7 +22,9 @@
                     <input type="password" class="form-control" id="password" placeholder="<%= translate("Password") %>">
                 </div>
                 <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signIn") %></button>
-                <button class="btn btn-lg btn-secondary btn-block" href="#signup"><%= translate("signUp") %></button>
+
+                <a href="#signup" class="btn btn-success navbar-btn" role="button"><%= translate("signUp") %></a>
+
             </form>
         </div>
     </div>
