--- a/static/html/footer.html
+++ b/static/html/footer.html
@@ -1,27 +1,16 @@
-<div id="footer">
-    <div class="inner">
+<div class="copyright"  >
         <div class="container">
-
             <div class="row">
-                <div class="col-md-12">
-
-                    <ul class="list-inline pull-right">
-                        <li><a href="#blog"><%= translate("blog") %></a></li>
-                        <li><a href="#status"><%= translate("status") %></a></li>
-                        <li><a href="#developers"><%= translate("api") %></a></li>
-                        <li><a href="#help"><%= translate("help") %></a></li>
-                    </ul>
-
-                    <ul class="list-inline">
-                        <li>&copy; 2015 <span><%= translate("ioFun") %></span>, Inc.</li>
-                        <li><a href="#terms"><%= translate("terms") %></a></li>
-                        <li><a href="#privacy"><%= translate("privacy") %></a></li>
-                        <li><a href="#security"><%= translate("security") %></a></li>
-                        <li><a href="#support"><%= translate("contact") %></a></li>
-                    </ul>
-                </div>
+                <div class="col-lg-5 col-md-5 col-sm-12">Copyright 2015 - Code Machine</div>
+                   <!-- <div class="col-lg-7 col-md-7 col-sm-12 clearfix">
+                        <div class="socials" style="float:center">
+                        <a href="#" class="facebook">       <i class="fa fa-facebook"></i>      <span>facebook</span></a>
+                        <a href="#" class="twitter">        <i class="fa fa-twitter"></i>       <span>twitter</span></a>
+                        <a href="#" class="linkedin">       <i class="fa fa-linkedin"></i>      <span>linkedin</span></a>
+                        <a href="#" class="instagram">      <i class="fa fa-instagram"></i>         <span>instagram</span></a>
+                        <a href="#" class="gplus">          <i class="fa fa-google-plus"></i>   <span>google plus</span></a>
+                      </div> 
+                    </div> !-->
             </div>
-
         </div>
-    </div>
-</div>
+    </div><!--end:copyright-->
