--- a/static/html/signup.html
+++ b/static/html/signup.html
@@ -34,6 +34,45 @@
                     <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="<%= translate("confirmPassword") %>"/>
                 </div>
 
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_company_name" name="reg_company_name" placeholder="<%= translate("companyName") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_street_address" name="reg_street_address" placeholder="<%= translate("streetAddress") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_city_town" name="reg_city_town" placeholder="<%= translate("cityTown") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_state_province" name="reg_state_province" placeholder="<%= translate("stateProvince") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_zip_postal" name="reg_zip_postal" placeholder="<%= translate("zipPostal") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_country_company" name="reg_country_company" placeholder="<%= translate("countryCompany") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_dba" name="reg_dba" placeholder="<%= translate("dba") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_telephone" name="reg_telephone" placeholder="<%= translate("telephone") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_fax" name="reg_fax" placeholder="<%= translate("fax") %>"/>
+                </div>
+
+
+
                 <button id="signup-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signUp") %></button>
 
                 <p>By clicking "Sign up", you agree to our terms of service and privacy policy. We will send you account related emails occasionally.</p>
