--- a/static/html/signup.html
+++ b/static/html/signup.html
@@ -71,7 +71,41 @@
                     <input type="text" class="form-control" id="reg_fax" name="reg_fax" placeholder="<%= translate("fax") %>"/>
                 </div>
 
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_company_email" name="reg_company_email" placeholder="<%= translate("companyEmail") %>"/>
+                </div>
 
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_incorporated_number" name="reg_incorporated_number" placeholder="<%= translate("incorporatedNumber") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_legal_company_name" name="reg_legal_company_name" placeholder="<%= translate("legalCompanyName") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_date_incorporation" name="reg_date_incorporation" placeholder="<%= translate("dateOfIncorporation") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_incorporated_address" name="reg_incorporated_address" placeholder="<%= translate("incorporatedAddress") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_incorporated_state" name="reg_incorporated_state" placeholder="<%= translate("incorporatedStateProvince") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_incorporated_country" name="reg_incorporated_country" placeholder="<%= translate("incorporatedCountry") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_federal_tax_id" name="reg_federal_tax_id" placeholder="<%= translate("federalTaxId") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_vat_tax_id" name="reg_vat_tax_id" placeholder="<%= translate("vatTaxIdFileNumber") %>"/>
+                </div>
 
                 <button id="signup-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signUp") %></button>
 
