missing chumster fields

--- a/static/html/signup.html
+++ b/static/html/signup.html
@@ -107,6 +107,15 @@
                     <input type="text" class="form-control" id="reg_vat_tax_id" name="reg_vat_tax_id" placeholder="<%= translate("vatTaxIdFileNumber") %>"/>
                 </div>
 
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_subsidiary_name" name="reg_subsidiary_name" placeholder="<%= translate("ifCompanySubsidiaryName") %>"/>
+                </div>
+
+                <div class="form-group">
+                    <input type="text" class="form-control" id="reg_subsidiary_reg_num" name="reg_subsidiary_reg_num" placeholder="<%= translate("ifCompanySubsidiaryRegistrationNum") %>"/>
+                </div>
+
+
                 <button id="signup-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signUp") %></button>
 
                 <p>By clicking "Sign up", you agree to our terms of service and privacy policy. We will send you account related emails occasionally.</p>
