--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -12,7 +12,7 @@
                    <div class="t-right col-sm-6 clearfix">
                         <ul class="nav">       
                             <li>
-                                <a href="http://snake.codemachine.io"  data-toggle="modal">
+                                <a href="#login">
                                     <i class="fa fa-user"></i>Wholesale/Store Registration Log In
                                 </a>
                             </li>
