let the water show the way

--- a/static/html/signup.html
+++ b/static/html/signup.html
@@ -19,21 +19,20 @@
                 <h3><%= translate("createYourUserAccount") %></h3>
 
                 <div class="form-group">
-                    <input type="text" id="signup_username" name="signup_username" class="form-control" placeholder="<%= translate("yourUsername") %>">
+                    <input type="text" id="reg_signup_username" name="signup_username" class="form-control" placeholder="<%= translate("yourUsername") %>">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" id="signup_email" name="signup_email" class="form-control" placeholder="<%= translate("yourEmail") %>">
+                    <input type="text" id="reg_signup_email" name="signup_email" class="form-control" placeholder="<%= translate("yourEmail") %>">
                 </div>
 
                 <div class="form-group">
-                    <input type="password" class="form-control" id="signup_password" name="signup_password" placeholder="<%= translate("password") %>"/>
+                    <input type="password" class="form-control" id="reg_signup_password" name="signup_password" placeholder="<%= translate("password") %>"/>
                 </div>
 
                 <div class="form-group">
-                    <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="<%= translate("confirmPassword") %>"/>
+                    <input type="password" class="form-control" id="reg_confirm_password" name="confirm_password" placeholder="<%= translate("confirmPassword") %>"/>
                 </div>
-
 
                 <div class="form-group">
                     <input type="text" class="form-control" id="reg_company_name" name="reg_company_name" placeholder="<%= translate("companyName") %>"/>
