--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
 </head>
 
 <body class="light-foot">
-    <div id="pageloader">
-        <div class="loader-item">
-            <img src="static/images/loading.gif" alt='loader' />
-        </div>
-    </div>
+    
     <!--end:preloader-->
    
     <!--end:Theme-option -->
@@ -64,8 +60,8 @@
                    <div class="t-right col-sm-6 clearfix">
                         <ul class="nav">       
                             <li>
-                                <a href="http://snakeye.codemachine.io/#logout">
-                                    <i class="fa fa-user"></i>Log Out
+                                <a href="http://wholesalesnakeyevape.com">
+                                    <i class="fa fa-user"></i>Wholesale Log In
                                 </a>
                             </li>
                             <li>
@@ -75,7 +71,7 @@
                             </li>
                           
                             <li class="itwm-header-cart">
-                                <a href="https://www.snakeyevapewholesale.com">
+                                <a href="https://www.snakeyevape.com">
                                     <i class="fa fa-shopping-cart"></i>
                                 </a>
                             </li>         
