--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 </head>
 
 <body class="light-foot">
-    
+    <div id="pageloader">
+        <div class="loader-item">
+            <img src="static/images/loading.gif" alt='loader' />
+        </div>
+    </div>
     <!--end:preloader-->
    
     <!--end:Theme-option -->
