--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                    <div class="t-right col-sm-6 clearfix">
                         <ul class="nav">       
                             <li>
-                                <a href="">
+                                <a href="wholesalesnakeyevape.com">
                                     <i class="fa fa-user"></i>Wholesale Log In
                                 </a>
                             </li>
@@ -241,9 +241,7 @@
 
                             <li class="multi-level-menu active">
                                 <a href="http://snakeyevape.com/main.sc">Shop</a>
-                                <ul class="dl-submenu">
-                                    <li><a href="http://snakeyevape.com/Novelty-Items_c13.htm">Novelty Items</a> </li> 
-                                </ul>
+                                
                             </li>
 
                         </ul>
