--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                    <div class="t-right col-sm-6 clearfix">
                         <ul class="nav">       
                             <li>
-                                <a href="wholesalesnakeyevape.com">
+                                <a href="https://wholesalesnakeyevape.com">
                                     <i class="fa fa-user"></i>Wholesale Log In
                                 </a>
                             </li>
