--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                    <div class="t-right col-sm-6 clearfix">
                         <ul class="nav">       
                             <li>
-                                <a href="http://wholesale.codemachine.io/#landing">
+                                <a href="http://wholesalesnakeyevape.com/#landing">
                                     <i class="fa fa-user"></i>Wholesale Log In
                                 </a>
                             </li>
