--- a/static/html/footer.html
+++ b/static/html/footer.html
@@ -1,16 +1,42 @@
 <div class="copyright"  >
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-md-5 col-sm-12">Copyright 2015 - Code Machine</div>
-                   <!-- <div class="col-lg-7 col-md-7 col-sm-12 clearfix">
-                        <div class="socials" style="float:center">
-                        <a href="#" class="facebook">       <i class="fa fa-facebook"></i>      <span>facebook</span></a>
-                        <a href="#" class="twitter">        <i class="fa fa-twitter"></i>       <span>twitter</span></a>
-                        <a href="#" class="linkedin">       <i class="fa fa-linkedin"></i>      <span>linkedin</span></a>
-                        <a href="#" class="instagram">      <i class="fa fa-instagram"></i>         <span>instagram</span></a>
-                        <a href="#" class="gplus">          <i class="fa fa-google-plus"></i>   <span>google plus</span></a>
-                      </div> 
-                    </div> !-->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5 col-md-5 col-sm-12">Copyright 2015 - Code Machine</div>
+            <!-- <div class="col-lg-7 col-md-7 col-sm-12 clearfix">
+                <div class="socials" style="float:center">
+                    <a href="#" class="facebook">       <i class="fa fa-facebook"></i>      <span>facebook</span></a>
+                    <a href="#" class="twitter">        <i class="fa fa-twitter"></i>       <span>twitter</span></a>
+                    <a href="#" class="linkedin">       <i class="fa fa-linkedin"></i>      <span>linkedin</span></a>
+                    <a href="#" class="instagram">      <i class="fa fa-instagram"></i>         <span>instagram</span></a>
+                    <a href="#" class="gplus">          <i class="fa fa-google-plus"></i>   <span>google plus</span></a>
+                </div> 
+            </div> !-->
             </div>
         </div>
-    </div><!--end:copyright-->
+</div><!--end:copyright-->
+
+<!-- login Modal popup -->
+<div class="modal fade" id="ageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <!--<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>-->
+                <h4 class="modal-title" id="myModalLabel"><%= translate("signIn") %></h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-signin">
+                    <div class="input-group">
+                        <span class="input-group-addon glyphicon glyphicon-user"></span>
+                        <input type="text" class="form-control" id="username" placeholder='<%= translate("yourAccount") %>'>
+                    </div>
+                </form>        
+            </div>
+            <div class="modal-footer">
+                <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signIn") %></button>
+                    
+                <button id="fun-signup" class="btn btn-lg btn-default btn-block"><%= translate("signUp") %></button>
+                <p>Please Log In if you already have your account or Sign Up if you want to create a new wholesale account with us</p>
+            </div>
+        </div>
+    </div>
+</div>
