--- a/static/html/footer.html
+++ b/static/html/footer.html
@@ -24,18 +24,12 @@
                 <h4 class="modal-title" id="myModalLabel"><%= translate("ageVerification") %></h4>
             </div>
             <div class="modal-body">
-                <form class="form-signin">
-                    <div class="input-group">
-                        <span class="input-group-addon glyphicon glyphicon-user"></span>
-                        <input type="text" class="form-control" id="username" placeholder='<%= translate("yourAccount") %>'>
-                    </div>
-                </form>        
-            </div>
-            <div class="modal-footer">
                 <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signIn") %></button>
                     
-                <button id="fun-signup" class="btn btn-lg btn-default btn-block"><%= translate("signUp") %></button>
-                <p>Please Log In if you already have your account or Sign Up if you want to create a new wholesale account with us</p>
+                <button id="fun-signup" class="btn btn-lg btn-default btn-block"><%= translate("signUp") %></button>       
+            </div>
+            <div class="modal-footer">
+                <p><%= translate("ageStuffs") %></p>
             </div>
         </div>
     </div>
