--- a/static/html/footer.html
+++ b/static/html/footer.html
@@ -24,9 +24,9 @@
                 <h4 class="modal-title" id="myModalLabel"><%= translate("ageVerification") %></h4>
             </div>
             <div class="modal-body">
-                <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit"><%= translate("signIn") %></button>
+                <button id="login-btn" class="btn btn-lg btn-primary btn-block" type="submit">-18</button>
                     
-                <button id="fun-signup" class="btn btn-lg btn-default btn-block"><%= translate("signUp") %></button>       
+                <button id="fun-signup" class="btn btn-lg btn-default btn-block">+18</button>       
             </div>
             <div class="modal-footer">
                 <p><%= translate("ageStuffs") %></p>
