--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -207,7 +207,7 @@
             </div><!-- /dl-menuwrapper -->
         </div>
         <!--end:inner-->
-    </div><!--end:nav-container-->
+    </div><!--end:nav-container x-->
 
     <!-- age Modal popup -->
     <div class="modal fade" id="ageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
