--- a/static/html/vaping-guide.html
+++ b/static/html/vaping-guide.html
@@ -312,11 +312,12 @@
                   
                    <p>The E-Cig – short for Electronic Cigarette – is a device that is battery powered to produce inhaled doses of nicotine by way of a vaporized solution. It makes use of a rechargeable battery that powers a heating element (coil). The E-Liquid (more on E-Liquid below) comes in contact with the coil and is then vaporized.
 
-                   <div class="img-post right"><a href="http://snakeyevape.com/main.sc" class="prettyphoto post-featured-img"><img src="../placeholders/portfolio/photo/6.jpg"></a> <span>Electronic Cigarette</span></div> Beginner Tip: When someone uses a tobacco cigarette, they are smoking since the cigarette produces smoke. When someone uses an electronic cigarette, they are vaping since the e-cigarette produces vapor.
+                   <div class="img-post right"><a href="http://snakeyevape.com/main.sc" class="prettyphoto post-featured-img"><img src="../placeholders/portfolio/photo/6.jpg">
+
+                   </a> <span>Electronic Cigarette</span> Beginner Tip: When someone uses a tobacco cigarette, they are smoking since the cigarette produces smoke. When someone uses an electronic cigarette, they are vaping since the e-cigarette produces vapor.
                    Incoming Search Terms: how to vape (61), vaping tips (61), How to use a vape (11), all about vaping (9)  
 
-
-
+                   </div>
                    <br>
                    
                    <h2>Electronic Cigarette Parts</h2>
