--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <li class="large">
                         <div class="p-item">
                             <div class="pthumb">
-                                <img src="static/placeholders/shop/thumbs/snakeye.png">
+                                <img src="static/placeholders/shop/thumbs/snakeye.jpg">
                             </div><!--end:pthumb-->
                         </div><!--end:p-item-->
                     </li>
