--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <span>We offer  best prices and brands on the market .</span>
                 </div> 
                 <ul class="grid-gallery four-col">
-                   
+                    <li class="large">
                         <div class="p-item">
                             <div class="pthumb">
                                 <img src="static/placeholders/shop/thumbs/snakeye.png">
