--- a/static/html/highend.html
+++ b/static/html/highend.html
@@ -337,7 +337,7 @@
                      </li><!--end:item-->
 
 
-                      <li>
+                    <!--  <li>
                           <div class="s1-item">
                               <div class="product-thumb">
                               <a href="../placeholders/shop/thumbs/hm03.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/hm03.jpg"></a>
@@ -351,9 +351,9 @@
                                     <a href="#"><i class="fa fa-shopping-cart"></i> </a>
                                     <a href="../placeholders/shop/thumbs/hm03.jpg" class="prettyPhoto"><i class="fa fa-search"></i> </a>
                                     
-                              </div><!--end:p-info -->
+                              </div>
                           </div> 
-                     </li><!--end:item-->
+                     </li> -->
 
 
 
