test atomizers href delete

--- a/static/html/sev-products2.html
+++ b/static/html/sev-products2.html
@@ -128,7 +128,7 @@
                </li>
                <!--megamenu-->
                <li class="multi-level-menu">
-                <a href="sev-products2.html">Atomizers</a>
+                <a href="#">Atomizers</a>
                       <ul class="sub-menu">
                       <li><a href="dripping.html">Rebuildable Dripping Atomizer</a> </li>
                       <li><a href="thanks.html">Tanks & Subtanks</a></li>
