comment botton Jet Fuel

--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -171,7 +171,7 @@
                                     <li><a href="static/html/ism.html">ISM Vape</a></li>
                                     <li><a href="static/html/kingcloud.html">King of the Clouds</a></li>
                                     <li><a href="static/html/fowsbrew.html"> Fows brew</a></li>
-                                    <li><a href="static/html/jetfuel.html"> Jet Fuel</a></li>
+                            <!--    <li><a href="static/html/jetfuel.html"> Jet Fuel</a></li> -->
                                 </ul>
                             </li>
 
