--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -72,7 +72,7 @@
                         </li>
                         <!--megamenu-->
                         <li class="multi-level-menu">
-                            <a href="static/html/sev-products2.html">Atomizers</a>
+                            <a href="#">Atomizers</a>
                             <ul class="sub-menu">
                                 <li><a href="static/html/dripping.html">Rebuildable Dripping Atomizer</a> </li>
                                 <li><a href="static/html/thanks.html">Tanks & Subtanks</a></li>  
