--- a/static/html/dripping.html
+++ b/static/html/dripping.html
@@ -320,7 +320,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/rda02.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/rda02.jpeg"></a>
+                              <a href="../placeholders/shop/thumbs/rda02.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/rda02.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Dripp by Euphoria RDA</h4>
