--- a/static/html/highend.html
+++ b/static/html/highend.html
@@ -320,7 +320,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/hm02.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/hm02.jpeg"></a>
+                              <a href="../placeholders/shop/thumbs/hm02.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/hm02.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Versa Mods Damascus </h4>
