--- a/static/html/thanks.html
+++ b/static/html/thanks.html
@@ -320,7 +320,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st02.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st02.jpeg"></a>
+                              <a href="../placeholders/shop/thumbs/st02.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st02.jpeg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Aero Tank</h4>
@@ -465,7 +465,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st10.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st10.jpeg"></a>
+                              <a href="../placeholders/shop/thumbs/st10.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st10.jpeg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Kanger Subtank 2</h4>
