--- a/static/html/coils.html
+++ b/static/html/coils.html
@@ -355,7 +355,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/cl04.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/cl04.jpeg"></a>
+                              <a href="../placeholders/shop/thumbs/cl04.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/cl04.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Donner Coils 5 PACK</h4>
@@ -391,7 +391,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/cl07.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/cl07.jpeg"></a>
+                              <a href="../placeholders/shop/thumbs/cl07.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/cl07.jpeg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Kanger Sub Tank 5 Pack Coils</h4>
