change shop to novelty items

--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -105,10 +105,8 @@
                         </li>
                            
                         <li class="multi-level-menu active">
-                            <a href="http://snakeyevape.com">Shop</a>
-                            <ul class="sub-menu">
-                                <li><a href="http://snakeyevape.com/Novelty-Items_c13.htm">Novelty Items</a> </li>
-                            </ul>
+                            <a href="http://snakeyevaperetail.com/Novelty-Items_c13.htm">Novelty Items</a>
+                            
                         </li>
                     </ul>
                     <!-- end:main-menu -->
