--- a/static/html/sev-products2.html
+++ b/static/html/sev-products2.html
@@ -302,7 +302,7 @@
                     <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="static/placeholders/shop/thumbs/p-52.jpg" class="prettyPhoto"><img src="placeholders/shop/thumbs/p-52.jpg"></a>
+                              <a href="http://snakeyevapeshop.com/static/placeholders/shop/thumbs/p-52.jpg" class="prettyPhoto"><img src="placeholders/shop/thumbs/p-52.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>YOCAN MAN ATOMIZER  </h4>
