--- a/static/html/sev-products2.html
+++ b/static/html/sev-products2.html
@@ -302,15 +302,15 @@
                     <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="http://snakeyevapeshop.com/static/placeholders/shop/thumbs/p-52.jpg" class="prettyPhoto"><img src="placeholders/shop/thumbs/p-52.jpg"></a>
+                              <a href="..placeholders/shop/thumbs/p-52.jpg" class="prettyPhoto"><img src="placeholders/shop/thumbs/p-52.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>YOCAN MAN ATOMIZER  </h4>
                                 <span> $19.99 </span>
                                 
                                 <nav>
-                                    <a href="http://snakeyevape.com/YOCAN-MAN-ATOMIZER-50942.htm"><i class="fa fa-info-circle"></i> </a>
-                                    <a href="http://snakeyevape.com/YOCAN-MAN-ATOMIZER-50942.htm"><i class="fa fa-shopping-cart"></i> </a>
+                                    <a href="http://snakeyevaperetail.com/YOCAN-MAN-ATOMIZER-50942.htm"><i class="fa fa-info-circle"></i> </a>
+                                    <a href="http://snakeyevaperetail.com/YOCAN-MAN-ATOMIZER-50942.htm"><i class="fa fa-shopping-cart"></i> </a>
                                     <a href="placeholders/shop/thumbs/p-52.jpg" class="prettyPhoto"><i class="fa fa-search"></i> </a>
                                     
                               </div><!--end:p-info -->
