--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                         <h4>ZONG Black </h4>
                         <span> $49.50 </span>
                         <nav>
-                            <a href="http://snakeyevaperetail.com/ZONG-Black-8254.htm"><i class="fa fa-info-circle"></i> </a>
-                            <a href="http://snakeyevaperetail.com/ZONG-Black-8254.htm"><i class="fa fa-shopping-cart"></i> </a>
+                            <a href="http://snakeyevaperetail.com/ZONG-BLACK-80296.htm"><i class="fa fa-info-circle"></i> </a>
+                            <a href="http://snakeyevaperetail.com/ZONG-BLACK-80296.htm"><i class="fa fa-shopping-cart"></i> </a>
                             <a href="static/placeholders/shop/thumbs/p-52.jpg" class="prettyPhoto"><i class="fa fa-search"></i> </a>
                         </nav>  
                     </div><!--end:p-info -->
