--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                                         <a href="static/placeholders/shop/thumbs/p-51.jpg" class="prettyPhoto"><i class="fa fa-search"></i> </a>
                                     </nav>
                                 </div><!--end:p-info -->
-                            </div> >
+                            </div> 
                     
                             <div class="s1-item">
                                 <div class="product-thumb">
