--- a/index.html
+++ b/index.html
@@ -438,8 +438,8 @@
                                     <h4>VISION SPINNER BATTERY</h4>
                                     <span>$25.99 </span>
                                     <nav>
-                                        <a href="http://snakeyevape.com/VISION-SPINNER-BATTERY-50935.htm"><i class="fa fa-info-circle"></i> </a>
-                                        <a href="http://snakeyevape.com/VISION-SPINNER-BATTERY-50935.htm"><i class="fa fa-shopping-cart"></i> </a>
+                                        <a href="http://snakeyevaperetail.com/18650-BATTERIES-80309.htm"><i class="fa fa-info-circle"></i> </a>
+                                        <a href="http://snakeyevaperetail.com/18650-BATTERIES-80309.htm"><i class="fa fa-shopping-cart"></i> </a>
                                         <a href="static/placeholders/shop/thumbs/p-51.jpg" class="prettyPhoto"><i class="fa fa-search"></i> </a>
                                     </nav>
                                 </div><!--end:p-info -->
