--- a/static/html/filling-cartomizers.html
+++ b/static/html/filling-cartomizers.html
@@ -330,7 +330,7 @@ Customers often ask us…."What's the best way to fill a cartomizer?" Here's a g
 </div> 
       </div> 
     <div class="action-box ab-flat">
-      <center><a href="http://snakeyevape.com/main.sc" class="btn btn-large btn-violet btn-icon"> <i class="fa fa-shopping-cart"></i> Purchase ONE now </a></center>
+      <center><a href="http://snakeyevaperetail.com/main.sc" class="btn btn-large btn-violet btn-icon"> <i class="fa fa-shopping-cart"></i> Purchase ONE now </a></center>
     </div><!--end:action-box-->
     
     
