--- a/static/html/vaping-guide.html
+++ b/static/html/vaping-guide.html
@@ -387,7 +387,7 @@ As new products continue to emerge, more advanced electronic cigarettes have ena
 </div> 
       </div> 
     <div class="action-box ab-flat">
-      <center><a href="http://snakeyevape.com/main.sc" class="btn btn-large btn-violet btn-icon"> <i class="fa fa-shopping-cart"></i> Purchase ONE now </a></center>
+      <center><a href="http://snakeyevaperetail.com/main.sc" class="btn btn-large btn-violet btn-icon"> <i class="fa fa-shopping-cart"></i> Purchase ONE now </a></center>
     </div><!--end:action-box-->
     
     
