--- a/static/html/kingcloud.html
+++ b/static/html/kingcloud.html
@@ -50,7 +50,9 @@
    
     <!--end:Theme-option -->
 <!--wrapper-->
- <section class="topbar clearfix">
+<div class="wrapper">
+    <header>
+     <section class="topbar clearfix">
         <div class="container">
             <div class="row">
                 <div class="t-left col-sm-7 clearfix">
