social media stuff

--- a/static/html/footer.html
+++ b/static/html/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-5 col-md-5 col-sm-12">Copyright 2015 - Code Machine</div>
-            <!-- <div class="col-lg-7 col-md-7 col-sm-12 clearfix">
+            <div class="col-lg-7 col-md-7 col-sm-12 clearfix">
                 <div class="socials" style="float:center">
                     <a href="#" class="facebook">       <i class="fa fa-facebook"></i>      <span>facebook</span></a>
                     <a href="#" class="twitter">        <i class="fa fa-twitter"></i>       <span>twitter</span></a>
@@ -10,7 +10,7 @@
                     <a href="#" class="instagram">      <i class="fa fa-instagram"></i>         <span>instagram</span></a>
                     <a href="#" class="gplus">          <i class="fa fa-google-plus"></i>   <span>google plus</span></a>
                 </div> 
-            </div> !-->
+            </div>
             </div>
         </div>
 </div><!--end:copyright-->
