--- a/static/html/footer.html
+++ b/static/html/footer.html
@@ -14,3 +14,24 @@
             </div>
         </div>
 </div><!--end:copyright-->
+
+
+<!-- age Modal popup -->
+<div class="modal fade" id="ageModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="myModalLabel"><%= translate("ageVerification") %></h4>
+            </div>
+            <div class="modal-body">
+                <button id="age-minus" class="btn btn-lg btn-default btn-block">-18</button>
+                    
+                <button id="age-plus" class="btn btn-lg btn-primary btn-block" type="submit">+18</button>       
+            </div>
+            <div class="modal-footer">
+                <p><%= translate("ageStuffs") %></p>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- dale -->
