see if stuff makes sense

--- a/index.html
+++ b/index.html
@@ -470,6 +470,91 @@
         <!-- dashboard --> 
         <div id="fun-dashboard"></div>
 
+        <!-- vaping-guide --> 
+        <div id="fun-vaping-guide"></div>
+
+        <!-- industry-research --> 
+        <div id="fun-industry-research"></div>
+
+        <!-- filling-tank --> 
+        <div id="fun-filling-tank"></div>
+
+        <!-- filling-cartomizers --> 
+        <div id="fun-filling-cartomizers"></div>
+
+        <!-- about-rebuildables --> 
+        <div id="fun-about-rebuildables"></div>
+
+        <!-- coil-building --> 
+        <div id="fun-coil-building"></div>
+
+        <!-- rda-w-cotton-agi --> 
+        <div id="fun-rda-w-cotton-agi"></div>
+
+        <!-- building-rba-kayfun --> 
+        <div id="fun-building-rba-kayfun"></div>
+
+        <!-- dual-helios --> 
+        <div id="fun-dual-helios"></div>
+
+        
+        <!-- II. second dropdown menu -->
+
+        <!-- box-mods -->
+        <div id="fun-box-mods"></div>
+
+        <!-- import-mods -->
+        <div id="fun-import-mods"></div>
+
+        <!--- high-end -->
+        <div id="fun-highend"></div>
+
+        <!-- ecigars -->
+        <div id="fun-ecigars"></div>
+
+        <!-- starter-kits -->
+        <div id="fun-starter-kits"></div>
+
+        <!-- batteries -->
+        <div id="fun-batteries"></div>
+
+        <!-- atomizers -->
+        <div id="fun-atomizers"></div>
+
+        <!-- dripping -->
+        <div id="fun-dripping"></div>
+
+        <!-- tanks -->
+        <div id="fun-tanks"></div>
+
+        <!-- III. dropdown stuff -->
+
+        <!-- andirondack -->
+        <div id="fun-andirondack"></div>
+
+        <!-- ism -->
+        <div id="fun-ism"></div>
+
+        <!-- kingcloud -->
+        <div id="fun-kingcloud"></div>
+
+        <!-- fogsbrew -->
+        <div id="fun-fogsbrew"></div>
+
+        <!-- jetfuel -->
+        <div id="fun-jetfuel"></div>
+
+        <!-- coils -->
+        <div id="fun-coils"></div>
+
+        <!-- dryherb -->
+        <div id="fun-dryherb"></div>
+
+        <!-- waxcdb -->
+        <div id="fun-waxcdb"></div>
+
+        <!-- novelty -->
+        <div id="fun-novelty"></div>
 
         <section class="our-collection">
             <div class="container">
@@ -896,6 +981,36 @@
 
     <script src="/static/js/views/landing.js"></script>
     <script src="/static/js/views/dashboard.js"></script>
+
+    <script src="/static/js/views/vaping.guide.js"></script>
+    <script src="/static/js/views/industry.research.js"></script>
+    <script src="/static/js/views/filling.tank.js"></script>
+    <script src="/static/js/views/filling.cartomizers.js"></script>
+    <script src="/static/js/views/about.rebuildables.js"></script>
+    <script src="/static/js/views/coil.building.js"></script>
+    <script src="/static/js/views/cotton.agi.js"></script>
+    <script src="/static/js/views/building.kayfun.js"></script>
+    <script src="/static/js/views/dual.helios.js"></script>
+
+    <script src="/static/js/views/box.mods.js"></script>
+    <script src="/static/js/views/import.mods.js"></script>
+    <script src="/static/js/views/high.end.js"></script>
+    <script src="/static/js/views/ecigars.js"></script>
+    <script src="/static/js/views/starter.kits.js"></script>
+    <script src="/static/js/views/batteries.js"></script>
+    <script src="/static/js/views/atomizers.js"></script>
+    <script src="/static/js/views/dripping.js"></script>
+    <script src="/static/js/views/tanks.js"></script>
+
+    <script src="/static/js/views/andirondack.js"></script>
+    <script src="/static/js/views/ism.js"></script>
+    <script src="/static/js/views/kingcloud.js"></script>
+    <script src="/static/js/views/fogsbrew.js"></script>
+    <script src="/static/js/views/jetfuel.js"></script>
+    <script src="/static/js/views/coils.js"></script>
+    <script src="/static/js/views/dryherb.js"></script>
+    <script src="/static/js/views/waxcdb.js"></script>
+    <script src="/static/js/views/novelty.js"></script>
 
     <script src="/static/js/views/navbar.js"></script>
     <script src="/static/js/views/subheader.js"></script>
