--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         </div> <!-- Carousel -->
     
     
-        <div class="top-products">
+        <div class="top-products" id="landing-01">
             <div class="list-pro features-pro nav-inside">
                 <div class="s1-item">
                     <div class="product-thumb">
@@ -545,7 +545,7 @@
         <!-- novelty -->
         <div id="fun-novelty"></div>
 
-        <section class="our-collection">
+        <section class="our-collection" id="landing-02">
             <div class="container">
                 <div class="text-heading large-head">
                     <h1>Our Brands</h1>
@@ -590,7 +590,7 @@
                 </ul><!--end:grid gallery--> 
             </div><!--end:container-->
         </section>
-        <div id="main">
+        <div id="landing-03">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
