--- a/static/html/navbar.html
+++ b/static/html/navbar.html
@@ -78,7 +78,7 @@
                                 <li><a href="static/html/andirondack.html"> Andirondack  Vapor </a> </li>
                                 <li><a href="static/html/ism.html">ISM Vape</a></li>
                                 <li><a href="static/html/kingcloud.html">King of the Clouds</a></li>
-                                <li><a href="static/html/fowsbrew.html"> Fows brew</a></li>
+                                <li><a href="static/html/fowsbrew.html"> Fogs brew</a></li>
                           <!--  <li><a href="static/html/jetfuel.html"> Jet Fuel</a></li> -->
                             </ul>
                         </li>
@@ -152,7 +152,7 @@
                                     <li><a href="static/html/andirondack.html"> Andirondack  Vapor </a> </li>
                                     <li><a href="static/html/ism.html">ISM Vape</a></li>
                                     <li><a href="static/html/kingcloud.html">King of the Clouds</a></li>
-                                    <li><a href="static/html/fowsbrew.html"> Fows brew</a></li>
+                                    <li><a href="static/html/fowsbrew.html"> Fogs brew</a></li>
                             <!--    <li><a href="static/html/jetfuel.html"> Jet Fuel</a></li> -->
                                 </ul>
                             </li>
