--- a/static/html/starterKits.html
+++ b/static/html/starterKits.html
@@ -31,7 +31,7 @@
                     <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st01.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st01.jpg"></a>
+                              <a href="/static/placeholders/shop/thumbs/st01.jpg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/st01.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Raze Vapor Magnifico 3 Flavor E Cigar Kit</h4>
@@ -48,7 +48,7 @@
                      <li>
                       <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st02.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st02.jpg"></a>
+                              <a href="/static/placeholders/shop/thumbs/st02.jpg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/st02.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>4 PACK ISMOKE 3 in one Vaporizer Kit</h4>
@@ -65,7 +65,7 @@
                      <li>
                       <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st03.jpg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st03.jpg"></a>
+                              <a href="/static/placeholders/shop/thumbs/st03.jpg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/st03.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>6 PACK ISMOKE RECHARGEABLE Tobacco vaporizer ONE HITTER</h4>
@@ -82,7 +82,7 @@
                     <li>
                       <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st04.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st04.jpeg"></a>
+                              <a href="/static/placeholders/shop/thumbs/st04.jpeg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/st04.jpeg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>Express Rechargeable Kits</h4>
@@ -100,7 +100,7 @@
                     <li>
                       <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="../placeholders/shop/thumbs/st05.jpeg" class="prettyPhoto"><img src="../placeholders/shop/thumbs/st05.jpeg"></a>
+                              <a href="/static/placeholders/shop/thumbs/st05.jpeg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/st05.jpeg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>4 PACK ISMOKE 3 in one Vaporizer Kit</h4>
