--- a/static/html/andirondack.html
+++ b/static/html/andirondack.html
@@ -6,8 +6,8 @@
           <div class="col-lg-12">
             <h1>Juices </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
-                  <li><a href="http://snakeyevape.com/ADIRONDACK-VAPOR_c9.htm">Products</a></li>
+                  <li><a href="#home">Home</a></li>
+                  <li><a href="#home">Products</a></li>
                 <li>Juices</li>
                </ul>  
           </div>
