--- a/static/html/dryherb.html
+++ b/static/html/dryherb.html
@@ -5,7 +5,7 @@
         	<div class="col-lg-12">
        			<h1> Dry Herb, Wax Vaporizers and kits </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/Dry-Herb-Wax-Vaporizers-Kits_c68.htm">Products</a></li>
                	<li> Dry Herb, Wax Vaporizers and kits/li>
                </ul>  
