--- a/static/html/ecigars.html
+++ b/static/html/ecigars.html
@@ -6,7 +6,7 @@
         	<div class="col-lg-12">
        			<h1>E Cigars  </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/E-Cigars_c69.htm">Products</a></li>
                	<li>E Cigars </li>
                </ul>  
