--- a/static/html/atomizers.html
+++ b/static/html/atomizers.html
@@ -6,7 +6,7 @@
           <div class="col-lg-12">
             <h1>Atomizers </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/main.sc">Products</a></li>
                 <li>Atomizers</li>
                </ul>  
