--- a/static/html/boxMods.html
+++ b/static/html/boxMods.html
@@ -5,7 +5,7 @@
         	<div class="col-lg-12">
        			<h1>Box Mods </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/Box-Mods_c60.htm">Products</a></li>
                	<li>Box Mods</li>
                </ul>  
