--- a/static/html/coils.html
+++ b/static/html/coils.html
@@ -5,7 +5,7 @@
           <div class="col-lg-12">
             <h1>Coils </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/Tanks-Subtanks_c63.htm">Products</a></li>
                 <li>Coils</li>
                </ul>  
