--- a/static/html/coming.html
+++ b/static/html/coming.html
@@ -7,7 +7,7 @@
           <div class="col-lg-12">
             <h1>Coming Soon</h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/main.sc">Snake Eye Vape</a></li>
                 <li>Coming Soon</li>
                </ul>  
