--- a/static/html/dripping.html
+++ b/static/html/dripping.html
@@ -6,7 +6,7 @@
           <div class="col-lg-12">
             <h1>RDA Rebuildable Dripping Atomizer </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/RDA-Rebuildable-Dripping-Atomizer_c61.htm">Products</a></li>
                 <li>RDA Rebuildable Dripping Atomizer</li>
                </ul>  
