--- a/static/html/highend.html
+++ b/static/html/highend.html
@@ -5,7 +5,7 @@
         	<div class="col-lg-12">
        			<h1>High End Mods </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/High-End-Mods_c44.htm">Products</a></li>
                	<li>High End Mods</li>
                </ul>  
