--- a/static/html/importMods.html
+++ b/static/html/importMods.html
@@ -5,7 +5,7 @@
         	<div class="col-lg-12">
        			<h1>Import Mods </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/Import-Mods-Starter-Kits-E-Cigars_c3.htm">Products</a></li>
                	<li>Import Mods</li>
                </ul>  
