--- a/static/html/kingcloud.html
+++ b/static/html/kingcloud.html
@@ -5,7 +5,7 @@
           <div class="col-lg-12">
             <h1>Juices </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/KING-OF-THE-CLOUDS_c11.htm">Products</a></li>
                 <li>Juices</li>
                </ul>  
