--- a/static/html/rda-w-dual-helios.html
+++ b/static/html/rda-w-dual-helios.html
@@ -5,7 +5,7 @@
           <div class="col-lg-12">
             <h1>Rda W/Dual Coil (helios) </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/main.sc">Snake Eye Vape</a></li>
                 <li>Rda W/Dual Coil (helios) </li>
                </ul>  
