--- a/static/html/starterKits.html
+++ b/static/html/starterKits.html
@@ -6,7 +6,7 @@
         	<div class="col-lg-12">
        			<h1>Starter Kits </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/main.sc">Products</a></li>
                	<li>Starter Kits</li>
                </ul>  
