--- a/static/html/tanks.html
+++ b/static/html/tanks.html
@@ -6,7 +6,7 @@
           <div class="col-lg-12">
             <h1>Tanks & Subtanks </h1>
                <ul class="breadcrumb">
-                  <li><a href="../../index.html">Home</a></li>
+                  <li><a href="#home">Home</a></li>
                   <li><a href="http://snakeyevape.com/Tanks-Subtanks_c63.htm">Products</a></li>
                 <li>Tanks & Subtanks</li>
                </ul>  
