fix on products

--- a/static/html/ism.html
+++ b/static/html/ism.html
@@ -6,7 +6,7 @@
             <h1>Juices </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/ISM-VAPE_c10.htm">Products</a></li>
+                  <li><a href="#home">Products</a></li>
                 <li>Juices</li>
                </ul>  
           </div>
