--- a/static/html/coming.html
+++ b/static/html/coming.html
@@ -8,7 +8,7 @@
             <h1>Coming Soon</h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/main.sc">Snake Eye Vape</a></li>
+                  <li><a href="#home">Snake Eye Vape</a></li>
                 <li>Coming Soon</li>
                </ul>  
           </div>
