--- a/static/html/ecigars.html
+++ b/static/html/ecigars.html
@@ -7,7 +7,7 @@
        			<h1>E Cigars  </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/E-Cigars_c69.htm">Products</a></li>
+                  <li><a href="#home">Products</a></li>
                	<li>E Cigars </li>
                </ul>  
         	</div>
