--- a/static/html/highend.html
+++ b/static/html/highend.html
@@ -6,7 +6,7 @@
        			<h1>High End Mods </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/High-End-Mods_c44.htm">Products</a></li>
+                  <li><a href="#home">Products</a></li>
                	<li>High End Mods</li>
                </ul>  
         	</div>
