--- a/static/html/importMods.html
+++ b/static/html/importMods.html
@@ -6,7 +6,7 @@
        			<h1>Import Mods </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/Import-Mods-Starter-Kits-E-Cigars_c3.htm">Products</a></li>
+                  <li><a href="#home">Products</a></li>
                	<li>Import Mods</li>
                </ul>  
         	</div>
