--- a/static/html/starterKits.html
+++ b/static/html/starterKits.html
@@ -7,7 +7,7 @@
        			<h1>Starter Kits </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/main.sc">Products</a></li>
+                  <li><a href="#home">Products</a></li>
                	<li>Starter Kits</li>
                </ul>  
         	</div>
