--- a/static/html/dual-helios.html
+++ b/static/html/dual-helios.html
@@ -6,7 +6,7 @@
             <h1>Rda W/Dual Coil (helios) </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/main.sc">Snake Eye Vape</a></li>
+                  <li><a href="#home">Snake Eye Vape</a></li>
                 <li>Rda W/Dual Coil (helios) </li>
                </ul>  
           </div>
