--- a/static/html/filling-tank.html
+++ b/static/html/filling-tank.html
@@ -7,7 +7,7 @@
             <h1>Filling a Tank </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/main.sc">Snake Eye Vape</a></li>
+                  <li><a href="#home">Snake Eye Vape</a></li>
                 <li>Filling a Tank </li>
                </ul>  
           </div>
