--- a/static/html/rda-w-cotton-agi.html
+++ b/static/html/rda-w-cotton-agi.html
@@ -6,7 +6,7 @@
             <h1>RDA W/Cotton (AGI) </h1>
                <ul class="breadcrumb">
                   <li><a href="#home">Home</a></li>
-                  <li><a href="http://snakeyevape.com/main.sc">Snake Eye Vape</a></li>
+                  <li><a href="#home">Snake Eye Vape</a></li>
                 <li>RDA W/Cotton (AGI)/li>
                </ul>  
           </div>
