--- a/static/html/coils.html
+++ b/static/html/coils.html
@@ -48,7 +48,7 @@
                      <li>
                           <div class="s1-item">
                               <div class="product-thumb">
-                              <a href="/static/placeholders/shop/thumbs/coil2.jpeg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/coil2.jpeg"></a>
+                              <a href="/static/placeholders/shop/thumbs/coil2.jpg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/coil2.jpg"></a>
                               </div>
                               <div class="p-info">
                                 <h4>1981 DUAL COIL TANKS</h4>
