--- a/static/html/boxMods.html
+++ b/static/html/boxMods.html
@@ -106,12 +106,12 @@
                               <a href="/static/placeholders/shop/thumbs/bm04.jpg" class="prettyPhoto"><img src="/static/placeholders/shop/thumbs/bm04.jpg"></a>
                               </div>
                               <div class="p-info">
-                                <h4>IPV 3 150 Watt Box Mod by Pioneer </h4>
-                                <span> $191.25 </span>
+                                <h4>BOX MODS SIGELI 150 </h4>
+                                <span> $182.25 </span>
                                
                                 <nav>
-                                    <a href="http://www.snakeyevaperetail.com/BOX-MODS-IPV3-80418.htm?categoryId=-1"><i class="fa fa-info-circle"></i> </a>
-                                    <a href="http://www.snakeyevaperetail.com/BOX-MODS-IPV3-80418.htm?categoryId=-1"><i class="fa fa-shopping-cart"></i> </a>
+                                    <a href="http://www.snakeyevaperetail.com/BOX-MODS-SIGELI-150-80415.htm?categoryId=-1"><i class="fa fa-info-circle"></i> </a>
+                                    <a href="http://www.snakeyevaperetail.com/BOX-MODS-SIGELI-150-80415.htm?categoryId=-11"><i class="fa fa-shopping-cart"></i> </a>
                                     <a href="/static/placeholders/shop/thumbs/bm04.jpg" class="prettyPhoto"><i class="fa fa-search"></i> </a>
                                     
                               </div><!--end:p-info -->
